tests/baselines/reference/numberToString.errors.txt
tests/cases/compiler/numberToString.ts(2,5): error TS2322: Type '数字' is not assignable to type '文字'.
tests/cases/compiler/numberToString.ts(9,4): error TS2345: Argument of type '3' is not assignable to parameter of type '文字'.


==== tests/cases/compiler/numberToString.ts (2 errors) ====
    function f1(n:number):string {
        return n; // error return type mismatch
        ~~~~~~~~~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    }
    
    function f2(s:string):void {
    }
    
    f1(3);
    f2(3); // error no coercion to string
       ~
!!! error TS2345: Argument of type '3' is not assignable to parameter of type '文字'.
    f2(3+""); // ok + operator promotes
    